# ITS_2020_BAC2_Microcntroller

./: .gitignore  README.md  token.txt
00_BaseProject/: led-blink-with-pwm.c  led-with-for-delay.c  led-with-timer-delay.c
00_BaseProject/define/: bit.h
00_BaseProject/hal/: pin-hal.c  pwm-hal.c  timer-hal.h
00_Programs_for_code_analysis/: count-sloc.c
01_ATmega328PBXPlained/: Makefile  README.md
01_ATmega328PBXPlained/Linux/: main.c  main.hex
01_ATmega328PBXPlained/MicrochipStudioProjekt/: AtmegaProject.atsln  AtmegaProject.cproj  GccApplication1.componentinfo.xml  GccApplication1.cproj  led-blink-with-pwm.c  led-with-for-delay.c  led-with-timer-delay.c
01_ATmega328PBXPlained/MicrochipStudioProjekt/Debug/: Atmega.elf  Atmega.hex  Atmega.lss  Atmega.map  Atmega.srec  AtmegaProject.elf  AtmegaProject.hex  AtmegaProject.lss  AtmegaProject.map  AtmegaProject.srec  GccApplication1.elf  GccApplication1.hex  GccApplication1.lss  GccApplication1.map  GccApplication1.srec  Makefile  led-blink-with-pwm.d  led-with-for-delay.d  led-with-timer-delay.d  ledWithForDelay.c.d  makedep.mk
01_ATmega328PBXPlained/MicrochipStudioProjekt/define/: bit.h  pin-define.h  pwm-define.h  timer-define.h
01_ATmega328PBXPlained/MicrochipStudioProjekt/hal/: pin-hal.c  pin-hal.h  pwm-hal.c  pwm-hal.h  timer-hal.c  timer-hal.h
01_ATmega328PBXPlained/_datasheets/PCBA_Rev4/: Readme.txt
02_Raspberry_Pi_Pico/: .gitignore  README.md  testmain.c
02_Raspberry_Pi_Pico/VisualStudioCodeProjekt/: .gitignore  CMakeLists.txt  README.md  led-blink-with-pwm.c  led-with-for-delay.c  led-with-timer-delay.c
02_Raspberry_Pi_Pico/VisualStudioCodeProjekt/define/: bit.h  pin-define.h  pwm-define.h  reset.h  timer-define.h
02_Raspberry_Pi_Pico/VisualStudioCodeProjekt/hal/: pin-hal.c  pin-hal.h  pwm-hal.c  pwm-hal.h  timer-hal.c  timer-hal.h
02_Raspberry_Pi_Pico/__test_blinkled/: picohal.h  rp2040define.h
02_Raspberry_Pi_Pico/define/: pin-define.h
02_Raspberry_Pi_Pico/test/: CMakeLists.txt  README.md  picohal.h  pinbit.h  pinhal.h  pinled.c  rp2040define.h  test_pico.c
02_STM32F303_Nucleo-32/CubeIDEProjekt/: CubeIDEProjekt.ioc
03_Heltec_WIFI_LoRa_32/: .gitignore  README.md
03_Heltec_WIFI_LoRa_32/VSC_led-blink-with-pwm/: CMakeLists.txt  README.md
03_Heltec_WIFI_LoRa_32/VSC_led-with-for-delay/: .gitignore
03_Raspberry_Pi_Pico/: Pin0-30define.txt  README.md
03_Raspberry_Pi_Pico/00_blinkled/: README.md  blink.c  main.c  picohal.h  rp2040define.h
03_STM32F303_Nucleo-32/CubeIDEProjekt/: .cproject  .project  CubeIDEProjekt.launch
03_STM32F303_Nucleo-32/_oldtry/: README.md  link.ld
03_STM32F303_Nucleo-32/hal/: pin-hal.h  pwm-hal.h
04_STM32F303_Nucleo-32/: led-blink-with-pwm.c
04_STM32F303_Nucleo-32/.metadata/: .log4j2.xml  version.ini
04_STM32F303_Nucleo-32/Cube-led-with-for-delay/: .cproject  .gitignore  .project  Cube-led-with-for-delay Debug.launch  Cube-led-with-for-delay.ioc
04_STM32F303_Nucleo-32/Cube-led-with-timer-delay/: .cproject  .gitignore  .mxproject  .project  Cube-led-with-timer-delay Debug.launch  Cube-led-with-timer-delay.ioc
04_STM32F303_Nucleo-32/define/: pin-define.h
05_ATmega328P_Arduino/: README.md  main.c
ATmega328PBXPlained/: README.md  Readme.md
ATmega328PBXPlained/MicrochipStudioProjekt/: main.c
ATmega328P_Arduino/: Makefile  Readme.md  main.c
STM32F303_Nucleo-32/: Makefile  _main.c  firmware.elf  link.ld.save  main.c
(+145 files in other folders)
